--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: python
 python:
+  - '2.6'
+  - '2.7'
   - '3.4'
   - '3.5'
   - '3.6'
 install:
   - pip install -r requirements.txt
-  - ./setup.py sdist
+  - python setup.py sdist
 script:
   - make check
